--- a/PBHLTH W251 Milestone 4 Final.Rmd
+++ b/PBHLTH W251 Milestone 4 Final.Rmd
@@ -4,14 +4,14 @@ author: "Priya Bala and Mihir Pandya"
 date: "2023-11-20"
 output: html_document
 ---
-  
-  # Project Milestone 4
-  
-  ## PBHLTH W251
-  
-  ### Priya Bala and Mihir Pandya
-  
-  [**Scenario 1:**]{.underline} This scenario contains demographic and geographic information, morbidity, disease severity, and county and regional vaccination data from a simulated California flu season.
+
+# Project Milestone 4
+
+## PBHLTH W251
+
+### Priya Bala and Mihir Pandya
+
+[**Scenario 1:**]{.underline} This scenario contains demographic and geographic information, morbidity, disease severity, and county and regional vaccination data from a simulated California flu season.
 
 At the end of the third project milestone we have created a final merged dataset with **aggregated measures of flu severity and COVID vaccination rates for the second quarter of calendar year 2023 by age categories**. We exported the final dataset and imported it again in this html document. For reference the code used to create the final merged data is added at the end of the document as a comment.
 
@@ -77,13 +77,17 @@ ggplot(final_clean_data, aes(x = `CUMULATIVE SEVERE`, y = `VACCINATION RATE`, co
   labs(title = " Flu Severity vs COVID-19 Vaccination Rates by Age Category in 
        Alameda County for April 1st 2023 quarter",
        x = "Cumulative Severe Flu Cases",
-       y = "Vaccination Rate") +
-  theme_minimal() + theme(axis.line = element_line(size = 0.5))
+       y = "Vaccination Rate",
+       caption = "Figure 1: This plot shows the cumulative number of severe flu cases and the COVID-19 vaccination rates across 
+different age categories in Alameda county during the April 1st 2023 quarter. The plot shows that as age increases
+the total number of severe flu cases and the COVID-19 vaccination rate increased as well.") +
+  theme_minimal() + theme(axis.line = element_line(size = 0.5),
+                          plot.caption = element_text(hjust = 0))
 ```
 
-[**Interpretation of the plot:**]{.underline}
+[**Specific Interpretation of the plot:**]{.underline}
 
-This scatterplot visualizes the relationship between the cumulative severe cases of flu and the COVID-19 vaccination rates across different age categories in Alameda County for the second quarter of calendar year 2023  Each point represents a specific age category, with the x-axis representing the cumulative severe flu cases and the y-axis representing the COVID-19 vaccination rate. The color of each point corresponds to different age categories.
+This scatterplot visualizes the relationship between the cumulative severe cases of flu and the COVID-19 vaccination rates across different age categories in Alameda County for the second quarter of calendar year 2023 Each point represents a specific age category, with the x-axis representing the cumulative severe flu cases and the y-axis representing the COVID-19 vaccination rate. The color of each point corresponds to different age categories.
 
 1.  **Age and Flu Severity:** The plot reveals a clear correlation between age and the total number of severe flu cases. In particular, the "0-17" age category exhibits the lowest number of severe flu cases, indicating that younger individuals within this category have experienced fewer instances of severe flu.
 
@@ -93,7 +97,7 @@ This scatterplot visualizes the relationship between the cumulative severe cases
 
 4.  **Highlight on 65 and Older Category:** Notably, the "65+" age category emerges with the highest total severe flu cases, emphasizing that individuals aged 65 and older are more vulnerable to severe flu. Despite the elevated risk, this age category also demonstrates a higher COVID-19 vaccination rate, reflecting an awareness of the importance of vaccination for older individuals who may face greater health risks.
 
-**Overall Implications:** The plot suggests a positive association between age, severe flu cases, and COVID-19 vaccination rates.
+**Overall Interpretation:** The plot suggests a positive association between age, severe flu cases, and COVID-19 vaccination rates.
 
 ### Step 3: Creating a table representing the final dataset
 
@@ -111,3 +115,7 @@ add_footnote(
   threeparttable = FALSE,
   escape = TRUE)
 ```
+
+### Code used in Milestone 3 
+
+We have added the code used for the final merge below. We have made all the code as comments
