--- a/PBHLTH W251 Milestone 4 Final.Rmd
+++ b/PBHLTH W251 Milestone 4 Final.Rmd
@@ -19,7 +19,7 @@ Graph/plot visualization was done by Priya Bala and the table was created by Mih
 
 ### Step 1: Importing the final dataset
 
-```{r, warning=FALSE message=FALSE}
+```{r, warning=FALSE, message=FALSE}
 
 # First we are adding all the packages that are needed to create the visualizations and importing the final dataset.
 
@@ -31,7 +31,7 @@ library(kableExtra)
 library(ggplot2)
 ```
 
-```{r warning=FALSE message=FALSE}
+```{r warning=FALSE, message=FALSE}
 
 # In the below code chunk we are importing the three datasets provided for this scenario. For datasets in a .csv format we are using the read_csv() command from the readr package.
 
@@ -46,11 +46,13 @@ final_data_renamed <- rename_with(final_data,
                                   ))
 
 print(final_data_renamed)
+
+# We are using print() command throughout this document because our dataset only has 4 rows. 
 ```
 
 Now that we have imported our final dataset, we are cleaning the final dataset slightly to make the visualizations easier.
 
-```{r, warning=FALSE message=FALSE}
+```{r, warning=FALSE, message=FALSE}
 
 # Removing the 12th column from final_data_renamed
 final_clean_data <- final_data_renamed[,-12]
@@ -63,9 +65,9 @@ print(final_clean_data)
 
 ### Step 2: Creating the graph/plot based on final cleaned aggregated dataset.
 
-Below, a scatterplot is being created to look at the association between the total number of severe flu cases and the COVID-19 vaccination rate by age categories in Alameda County during the second quarter of calendar year 2023. For this plot, the "Cumulative Severe" column is being used (created in the third project mileston)e as a summarized measure that was aggregated for each age category; the "Vaccination Rate" variable that was also created in the third project milestone and aggregated for each age category.
+Below, a scatterplot is being created to look at the association between the total number of severe flu cases and the COVID-19 vaccination rate by age categories in Alameda County during the second quarter of calendar year 2023. For this plot, the "Cumulative Severe" column is being used (created in the third project milestone) as a summarized measure that was aggregated for each age category; the "Vaccination Rate" variable that was also created in the third project milestone and aggregated for each age category.
 
-```{r, echo = TRUE}
+```{r, echo = TRUE, warning=FALSE, message=FALSE}
 
 ggplot(final_clean_data, aes(x = `CUMULATIVE SEVERE`, y = `VACCINATION RATE`, color = `AGE CAT`)) +
   geom_point(size = 3) +  # Adjusting the size of the points as needed
@@ -75,7 +77,7 @@ ggplot(final_clean_data, aes(x = `CUMULATIVE SEVERE`, y = `VACCINATION RATE`, co
             aes(label = paste(round(`CUMULATIVE SEVERE`, 2), ", ", round(`VACCINATION RATE`, 2))),
             position = position_nudge(x = -5), size = 3, show.legend = FALSE, hjust = 5) +  # Moving label to the left
   labs(title = " Flu Severity vs COVID-19 Vaccination Rates by Age Category in 
-       Alameda County for April 1st 2023 quarter",
+       Alameda County for the second quarter of 2023",
        x = "Cumulative Severe Flu Cases",
        y = "Vaccination Rate",
        caption = "Figure 1: This plot shows the cumulative number of severe flu cases and the COVID-19 vaccination rates across 
@@ -101,7 +103,7 @@ This scatterplot visualizes the relationship between the cumulative severe cases
 
 ### Step 3: Creating a table representing the final dataset
 
-```{r, warning=FALSE message=FALSE}
+```{r, warning=FALSE, message=FALSE, echo=TRUE}
 
 # Making a kable
 new_kable <- kable(final_clean_data, format = "markdown", caption = "Influenza Cases and COVID-19 Vaccination Data from Alameda County Second Quarter 2023", align = "c", booktabs = TRUE) %>%
@@ -116,11 +118,11 @@ add_footnote(
   escape = TRUE)
 ```
 
-### Code used in Milestone 3 
+### Code used in Milestone 3
 
 We have added the code used for the final merge below. We have made all the code as comments below because we would have had to add many cleaned/uncleaned datasets and the initial dataset provided by the instructors to show the final merged document. If needed please use our Milestone 3 as reference to get more information on the aggregation and the final dataset.
 
-```{r}
+```{r, warning=FALSE, message=FALSE}
 # Merging the two final datasets to create one final dataset
 
 ### The code is below ### 
