--- a/PBHLTH W251 Project Milestone 6.Rmd
+++ b/PBHLTH W251 Project Milestone 6.Rmd
@@ -19,6 +19,8 @@ Both of the flu datasets were then cleaned in order to facilitate a final merger
 
 The COVID-19 vaccination data was then cleaned in order facilitate eventually joining it with the flu morbidity data. The columns were renamed to a snakecase format, subset to include data from the second quarter of calendar year 2023 only, and then further subset to include only data for Alameda County and age, and subset a final time to account for only one stratification of age (merging three ranges within 0-17 to just 0-17) into a single row (summary() function). The vaccination rate was then calculated in a separate column. After this, the dataset was combined with the flu morbidity dataset, and there was some minor column renaming/arrangement after. Descriptive statistics of this combined dataset were generated and presented in table format.
 
+Prior to the generation of data visualizations, the only minor data cleaning that was done to the combined dataset was removing a column and renaming another in order to make the process easier. A scatterplot was created to examine the association between the total number of severe flu cases and the COVID-19 vaccination rate by age categories in Alameda County during the second quarter of calendar year 2023. Then, a table was made showing a variety of statistics pertaining to influenza (flu) cases and COVID-19 vaccination in Alameda County in the second quarter of calendar year 2023. These visualizations represent the main results from the combined dataset.
+
 ## Results 
 
 Table 1 provides a comprehensive overview of influenza cases and COVID-19 vaccination data in Alameda County during the second quarter of 2023. The table is organized by age categories, ranging from 0-17 to 65+, and includes various key metrics. In terms of influenza cases, mean statistics, cumulative values, and severe cases are outlined for each age category. Notably, as age increases, there is a visible rise in severe influenza cases, signaling potential challenges in managing the impact of the virus among older populations.
